k8s/komp-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: komp-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: komp-ui
  template:
    metadata:
      labels:
        app: komp-ui
    spec:
      containers:
      - name: komp-ui
        image: aido123/komp-ui
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: komp-ui
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: komp-ui
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: komp-ui
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
      - kompui.hynes.pri
    secretName: tls-secret
  rules:
  - host: kompui.hynes.pri
    http:
      paths:
      - backend:
          serviceName: komp-ui
          servicePort: 80
        path: /(.*)
